GiRaFFE/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb: Fixed sign error in cminus calculation; hopefully fixed 'Output directory not found' error.

--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -58,12 +58,11 @@
     "\n",
     "1. [Step 1](#prelim): Preliminaries\n",
     "1. [Step 2](#s_i_flux): The $\\tilde{S}_i$ function\n",
-    "    1. [Step 2.a](#define): The function declaration\n",
+    "    1. [Step 2.a](#define): The function declaration: inputs, outputs, and macros\n",
     "    1. [Step 2.b](#speed_limit): Speed-limit the velocities\n",
-    "    1. [Step 2.c](#smallb): Magnetic field in the comoving fluid frame\n",
-    "    1. [Step 2.d](#hydro_speed): Hydrodynamic wave speeds\n",
-    "    1. [Step 2.e](#useful_quantities): Some final needed quantities\n",
-    "    1. [Step 2.f](#fluxes): Compute the fluxes\n",
+    "    1. [Step 2.c](#smallb): Computing $b^\\mu$, the magnetic field in the comoving fluid frame\n",
+    "    1. [Step 2.d](#hydro_speed): GRFFE characteristic wave speeds\n",
+    "    1. [Step 2.e](#fluxes): Compute the HLLE fluxes\n",
     "1. [Step 3](#derive_speed): Complete Derivation of the Wave Speeds\n",
     "1. [Step 4](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
@@ -96,8 +95,10 @@
     "import cmdline_helper as cmd     # NRPy+: Multi-platform Python command-line interface\n",
     "import shutil, os, sys           # Standard Python modules for multiplatform OS-level functions\n",
     "\n",
-    "outdir = \"GiRaFFE_standalone_Ccodes/PPM\"\n",
-    "cmd.mkdir(os.path.join(outdir,\"/\"))\n",
+    "outdir = \"GiRaFFE_standalone_Ccodes/\"\n",
+    "cmd.mkdir(outdir)\n",
+    "outdir += \"PPM/\"\n",
+    "cmd.mkdir(outdir)\n",
     "\n",
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
@@ -153,7 +154,7 @@
     "\n",
     "<a id='define'></a>\n",
     "\n",
-    "## Step 2.a: The function declaration \\[Back to [top](#toc)\\]\n",
+    "## Step 2.a: The function declaration: inputs, outputs, and macros \\[Back to [top](#toc)\\]\n",
     "$$\\label{define}$$\n",
     "\n",
     "First, we give the function definition. This function will take as parameters the integers `i0`, `i1`, and `i2`; these indicate a point on the grid. The function also needs the parameter `flux_dirn` to know which direction to compute the flux in, the array of gridfunctions (which we use for the interolated face values (see [the previous tutorial](Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb) and the fluxes, here), the interpolated quantities on the cell interfaces `FACEVAL` and `FACEVAL_LAPSE_PSI4`, and the speeds `cmax` and `cmin`. We also calculate quantities related to the conformal factor $\\psi$ (including the square root of the determinant of the metric $\\sqrt{\\gamma}$) and the lapse $\\alpha$; these lines will need to be modified to use the values actually stored by our `GiRaFFE`. "
@@ -279,7 +280,7 @@
    "source": [
     "<a id='smallb'></a>\n",
     "\n",
-    "## Step 2.c: Magnetic field in the comoving fluid frame \\[Back to [top](#toc)\\]\n",
+    "## Step 2.c: Computing $b^\\mu$, the magnetic field in the comoving fluid frame \\[Back to [top](#toc)\\]\n",
     "$$\\label{smallb}$$\n",
     "\n",
     "Now, we will compute the magnetic field in the comoving fluid frame $b^\\mu$ , as defined in [Gammie's paper](https://arxiv.org/pdf/astro-ph/0301509.pdf).  We will also lower the index of the four velocities on the faces $u_\\mu$."
@@ -374,7 +375,7 @@
    "source": [
     "<a id='hydro_speed'></a>\n",
     "\n",
-    "## Step 2.d: Hydrodynamic wave speeds \\[Back to [top](#toc)\\]\n",
+    "## Step 2.d: GRFFE characteristic wave speeds \\[Back to [top](#toc)\\]\n",
     "$$\\label{hydro_speed}$$\n",
     "\n",
     "Next, we will find the speeds at which the hydrodynamics waves propagate. We start from the speed of light (since FFE deals with very diffuse plasmas), which is $c=1.0$ in our chosen units. We then find the speeds $c_+$ and $c_-$ on each face with the function `find_cp_cm` **(TODO: IN PROGRESS)**; then, we find minimum and maximum speeds possible from among those.\n",
@@ -447,37 +448,66 @@
     "  cp = 0.5*(detm-b)/a;\n",
     "  cm = -0.5*(detm+b)/a;\n",
     "  cplus  = 0.5*(cp+cm+fabs(cp-cm));\n",
-    "  cminus = 0.5*(cp+cm+fabs(cm-cp));\n",
+    "  cminus = 0.5*(cp+cm-fabs(cp-cm));\n",
     "```\n",
     "This can be simplified further, by substituting `cp` and `cm` into the below equations and eliminating terms as appropriate. First note that `cp+cm = -b/a` and that `cp-cm = detm/a`. Thus,\n",
     "```c\n",
     "  cplus  = 0.5*(-b/a + fabs(detm/a));\n",
-    "  cminus = 0.5*(-b/a + fabs(-detm/a));\n",
+    "  cminus = 0.5*(-b/a - fabs(detm/a));\n",
     "```\n",
     "This leaves us with an expression that can be much more easily NRPyfied. So, we will rewrite the following in NRPy+, making only minimal changes to be proper Python.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/*\n",
+      " *  Original SymPy expression:\n",
+      " *  \"thing = (4*u0**2*(-v02 + 1) + 4*v02/lapse**2)*(u0**2*vi**2*(-v02 + 1) - v02*(gammadet**(1/3)*gupii - shifti**2/lapse**2)) - (-2*u0**2*vi*(-v02 + 1) + 2*shifti*v02/lapse**2)**2 + 4*((-lapse**2*u0**2*(v02 - 1) + v02)*(lapse**2*u0**2*vi**2*(v02 - 1) + v02*(gupii*lapse**2*cos(atan2(0, gammadet)/3)*Abs(gammadet)**(1/3) - shifti**2)) + (lapse**2*u0**2*vi*(v02 - 1) + shifti*v02)**2)/lapse**4\"\n",
+      " */\n",
+      "{\n",
+      "   const double tmp0 = pow(lapse, 2);\n",
+      "   const double tmp1 = 1.0/tmp0;\n",
+      "   const double tmp2 = shifti*v02;\n",
+      "   const double tmp3 = pow(u0, 2);\n",
+      "   const double tmp4 = tmp3*(-v02 + 1);\n",
+      "   const double tmp5 = pow(vi, 2);\n",
+      "   const double tmp6 = pow(shifti, 2);\n",
+      "   const double tmp7 = tmp0*tmp3*(v02 - 1);\n",
+      "   thing = -pow(2*tmp1*tmp2 - 2*tmp4*vi, 2) + (4*tmp1*v02 + 4*tmp4)*(tmp4*tmp5 - v02*(cbrt(gammadet)*gupii - tmp1*tmp6)) + 4*(pow(tmp2 + tmp7*vi, 2) + (-tmp7 + v02)*(tmp5*tmp7 + v02*(gupii*tmp0*cos((1.0/3.0)*atan2(0, gammadet))*cbrt(fabs(gammadet)) - tmp6)))/pow(lapse, 4);\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "v02,u0,vi,lapse,shifti,gammadet,gupii = sp.symbols(\"v02 u0 vi lapse shifti gammadet gupii\")\n",
+    "v02,u0,vi,lapse,shifti,gammadet,gupii = sp.symbols(\"v02 u0 vi lapse shifti gammadet gupii\",real=True)\n",
     "psim4 = gammadet**sp.Rational(1,3)\n",
-    "a = u0*u0 * (1.0-v02) + v02/(lapse*lapse)\n",
-    "b = 2.0* ( shifti * v02/(lapse*lapse) - u0*u0 * vi * (1.0-v02) )\n",
-    "c = u0*u0*vi*vi * (1.0-v02) - v02 * ( psim4*gupii - shifti*shifti/(lapse*lapse))\n",
-    "detm = b*b - 4.0*a*c\n",
-    "detm = sp.sqrt(sp.Rational(1,2)*(detm + sp.Abs(detm)))\n",
-    "cplus  = sp.Rational(1,2)*(-b/a + sp.Abs(detm/a))\n",
-    "cminus = sp.Rational(1,2)*(-b/a + sp.Abs(-detm/a))\n",
-    "outputC([cplus,cminus],[\"cplus\",\"\"])"
+    "a = u0*u0 * (1-v02) + v02/(lapse*lapse)\n",
+    "b = 2* ( shifti * v02/(lapse*lapse) - u0*u0 * vi * (1-v02) )\n",
+    "c = u0*u0*vi*vi * (1-v02) - v02 * ( psim4*gupii - shifti*shifti/(lapse*lapse))\n",
+    "detm = b*b - 4*a*c\n",
+    "# detm = sp.sqrt(sp.Rational(1,2)*(detm + sp.Abs(sp.re(detm))))\n",
+    "# We need to add calls to sp.re() in the next step so that sympy doesn't try\n",
+    "# to take the absolute value by multiplying by the complex conjugate, then \n",
+    "# taking the square root.\n",
+    "cplus  = sp.Rational(1,2)*(-b/a + sp.Abs(sp.re(detm/a)))\n",
+    "cminus = sp.Rational(1,2)*(-b/a - sp.Abs(sp.re(detm/a)))\n",
+    "# outputC([cplus,cminus],[\"cplus\",\"cminus\"],filename = \"stdout\", params = \"outCverbose=False\",)\n",
+    "outputC(sp.simplify(sp.re(detm))-detm,\"thing\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,10 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='useful_quantities'></a>\n",
-    "\n",
-    "## Step 2.e: Some final needed quantities \\[Back to [top](#toc)\\]\n",
-    "$$\\label{useful_quantities}$$\n",
+    "**Former Step 2.e: Some final needed quantities (Not needed in NRPy)**\n",
     "\n",
     "Now, we lower the index on the spatial parts of $b^\\mu$, $b^i$. Since $b_\\nu = g_{\\mu\\nu} b^\\mu$ and \n",
     "$$\n",
@@ -611,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +713,7 @@
    "source": [
     "<a id='fluxes'></a>\n",
     "\n",
-    "## Step 2.f: Compute the fluxes \\[Back to [top](#toc)\\]\n",
+    "## Step 2.e: Compute the HLLE fluxes \\[Back to [top](#toc)\\]\n",
     "$$\\label{fluxes}$$\n",
     "\n",
     "Finally, we can compute the flux in each direction. This momentum flux in the $m$ direction is defined as $\\alpha \\sqrt{\\gamma} T^m_{\\ \\ j}$. We have already defined $\\alpha \\sqrt{\\gamma}$, so all we need to do is calculate $T^m_{\\ \\ j}$. We will do so in accordance with the method published by [Harten, Lax, and von Leer](https://epubs.siam.org/doi/pdf/10.1137/1025002)  and [Einfeldt](https://epubs.siam.org/doi/10.1137/0725021) (hereafter HLLE) to solve the Riemann problem. So, we define $f(u) = T^m_{\\ \\ j}$ on each face as \n",
@@ -706,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -763,9 +790,8 @@
     "    st_j_r = alpha_sqrt_gamma * (smallb2_r*u4upperZero_r*u_rD[mom_comp] - smallb4_rU[0]*smallb4_rD[mom_comp+1])\n",
     "    st_j_l = alpha_sqrt_gamma * (smallb2_l*u4upperZero_l*u_lD[mom_comp] - smallb4_lU[0]*smallb4_lD[mom_comp+1])\n",
     "    \n",
-    "    # TODO: Remove this once we port the relevant functions\n",
-    "    cmaxL = sp.sympify(1.0)\n",
-    "    cminL = sp.sympify(-1.0)\n",
+    "    # Declare these as symbols\n",
+    "    cmaxL,cminL = sp.symbols(\"cmaxL cminL\")\n",
     "    \n",
     "    return (cminL*Fr + cmaxL*Fl - cminL*cmaxL*(st_j_r-st_j_l) )/(cmaxL + cminL)\n",
     "    "
@@ -777,12 +803,12 @@
    "source": [
     "Finally, now that we have the equations written, we can write out the files. After writing a brief post string (to close the function), we will loop over `flux_dirn`, creating one C file for each flux direction. In each file, we will include the math to calculate each momentum-flux component `mom_comp` in that direction.\n",
     "\n",
-    "However, we have written "
+    "We have written the function `HLLE_solver()` so that we can easily compute the flux as specified by those two indices."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,9 +830,9 @@
     "    Stilde_flux_kernel = fin.FD_outputC(\"returnstring\",Stilde_flux_to_print,params=\"outCverbose=False\")\n",
     "    out_string += Stilde_flux_kernel\n",
     "    out_string += Stilde_flux_string_post\n",
-    "    # Comment out for now: output directory doesn't exist.\n",
-    "    #     with open(os.path.join(outdir,\"GRFFE__S_\"+str(flux_dirn)+\"__flux.C\"), \"w\") as file:\n",
-    "    #         file.write(out_string)\n",
+    "#     Comment out for now: output directory doesn't exist.\n",
+    "    with open(os.path.join(outdir,\"GRFFE__S_\"+str(flux_dirn)+\"__flux.C\"), \"w\") as file:\n",
+    "        file.write(out_string)\n",
     "\n"
    ]
   },
@@ -830,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +984,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb to latex\n",
-      "[NbConvertApp] Writing 86458 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
+      "[NbConvertApp] Writing 101914 bytes to Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
