--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.ipynb
@@ -445,29 +445,34 @@
     "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/2b402d7eaf8b177e5979cdfd3b73fd992dd2fa7e/IllinoisGRMHD/src/convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C\"\n",
     "original_IGM_file_name = \"convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij-original.C\"\n",
     "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
-    "urllib.urlretrieve(original_IGM_file_url,original_IGM_file_path)\n",
     "\n",
-    "# Check if the downloaded file exists\n",
-    "# If it doesn't, error out\n",
-    "if not path.exists(original_IGM_file_path):\n",
-    "    print(\"Error, file \"+original_IGM_file_path+\" not found.\")\n",
+    "# Then download the original IllinoisGRMHD source code\n",
+    "# We try it here in a couple of ways in an attempt to keep\n",
+    "# the code more portable\n",
+    "try:\n",
+    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "except:\n",
+    "    original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
     "\n",
-    "# If it does, perform validation\n",
+    "# Write down the file the original IllinoisGRMHD source code\n",
+    "with open(original_IGM_file_path,\"w\") as file:\n",
+    "    file.write(original_IGM_file_code)\n",
+    "\n",
+    "# Perform validation\n",
+    "Validation__ADM_to_BSSN__det_gammabar_eq_1__C  = !diff $original_IGM_file_path $outfile_path__ADM_to_BSSN__det_gammabar_eq_1__C\n",
+    "\n",
+    "if Validation__ADM_to_BSSN__det_gammabar_eq_1__C == []:\n",
+    "    # If the validation passes, we do not need to store the original IGM source code file\n",
+    "    !rm $original_IGM_file_path\n",
+    "    print(\"Validation test for convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C: PASSED!\")\n",
     "else:\n",
-    "    Validation__ADM_to_BSSN__det_gammabar_eq_1__C  = !diff $original_IGM_file_path $outfile_path__ADM_to_BSSN__det_gammabar_eq_1__C\n",
-    "\n",
-    "    if Validation__ADM_to_BSSN__det_gammabar_eq_1__C == []:\n",
-    "        # If the validation passes, we do not need to store the original IGM source code file\n",
-    "        !rm $original_IGM_file_path\n",
-    "        print(\"Validation test for convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C: PASSED!\")\n",
-    "    else:\n",
-    "        # If the validation fails, we keep the original IGM source code file\n",
-    "        print(\"Validation test for convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C: FAILED!\")\n",
-    "        # We also print out the difference between the code generated\n",
-    "        # in this tutorial module and the original IGM source code\n",
-    "        print(\"Diff:\")\n",
-    "        for diff_line in Validation__ADM_to_BSSN__det_gammabar_eq_1__C:\n",
-    "            print(diff_line)"
+    "    # If the validation fails, we keep the original IGM source code file\n",
+    "    print(\"Validation test for convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.C: FAILED!\")\n",
+    "    # We also print out the difference between the code generated\n",
+    "    # in this tutorial module and the original IGM source code\n",
+    "    print(\"Diff:\")\n",
+    "    for diff_line in Validation__ADM_to_BSSN__det_gammabar_eq_1__C:\n",
+    "        print(diff_line)"
    ]
   },
   {
@@ -493,7 +498,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.ipynb to latex\n",
-      "[NbConvertApp] Writing 48279 bytes to Tutorial-IllinoisGRMHD__convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.tex\n",
+      "[NbConvertApp] Writing 48786 bytes to Tutorial-IllinoisGRMHD__convert_ADM_to_BSSN__enforce_detgtij_eq_1__and_compute_gtupij.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
