--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb
@@ -1539,29 +1539,34 @@
     "original_IGM_file_url  = \"https://bitbucket.org/zach_etienne/wvuthorns/raw/ea4d70af29c988ce25fc5fdba5550e31e52f7df3/IllinoisGRMHD/src/driver_evaluate_MHD_rhs.C\"\n",
     "original_IGM_file_name = \"driver_evaluate_MHD_rhs-original.C\"\n",
     "original_IGM_file_path = os.path.join(IGM_src_dir_path,original_IGM_file_name)\n",
-    "urllib.urlretrieve(original_IGM_file_url,original_IGM_file_path)\n",
     "\n",
-    "# Check if the downloaded file exists\n",
-    "# If it doesn't, error out\n",
-    "if not path.exists(original_IGM_file_path):\n",
-    "    print(\"Error, file \"+original_IGM_file_path+\" not found.\")\n",
+    "# Then download the original IllinoisGRMHD source code\n",
+    "# We try it here in a couple of ways in an attempt to keep\n",
+    "# the code more portable\n",
+    "try:\n",
+    "    original_IGM_file_code = urllib.request.urlopen(original_IGM_file_url).read()\n",
+    "except:\n",
+    "    original_IGM_file_code = urllib.urlopen(original_IGM_file_url).read()\n",
     "\n",
-    "# If it does, perform validation\n",
+    "# Write down the file the original IllinoisGRMHD source code\n",
+    "with open(original_IGM_file_path,\"w\") as file:\n",
+    "    file.write(original_IGM_file_code)\n",
+    "\n",
+    "# Perform validation\n",
+    "Validation__driver_evaluate_MHD_rhs__C  = !diff $original_IGM_file_path $outfile_path__driver_evaluate_MHD_rhs__C\n",
+    "\n",
+    "if Validation__driver_evaluate_MHD_rhs__C == []:\n",
+    "    # If the validation passes, we do not need to store the original IGM source code file\n",
+    "    !rm $original_IGM_file_path\n",
+    "    print(\"Validation test for driver_evaluate_MHD_rhs.C: PASSED!\")\n",
     "else:\n",
-    "    Validation__driver_evaluate_MHD_rhs__C  = !diff $original_IGM_file_path $outfile_path__driver_evaluate_MHD_rhs__C\n",
-    "\n",
-    "    if Validation__driver_evaluate_MHD_rhs__C == []:\n",
-    "        # If the validation passes, we do not need to store the original IGM source code file\n",
-    "        !rm $original_IGM_file_path\n",
-    "        print(\"Validation test for driver_evaluate_MHD_rhs.C: PASSED!\")\n",
-    "    else:\n",
-    "        # If the validation fails, we keep the original IGM source code file\n",
-    "        print(\"Validation test for driver_evaluate_MHD_rhs.C: FAILED!\")\n",
-    "        # We also print out the difference between the code generated\n",
-    "        # in this tutorial module and the original IGM source code\n",
-    "        print(\"Diff:\")\n",
-    "        for diff_line in Validation__driver_evaluate_MHD_rhs__C:\n",
-    "            print(diff_line)"
+    "    # If the validation fails, we keep the original IGM source code file\n",
+    "    print(\"Validation test for driver_evaluate_MHD_rhs.C: FAILED!\")\n",
+    "    # We also print out the difference between the code generated\n",
+    "    # in this tutorial module and the original IGM source code\n",
+    "    print(\"Diff:\")\n",
+    "    for diff_line in Validation__driver_evaluate_MHD_rhs__C:\n",
+    "        print(diff_line)"
    ]
   },
   {
@@ -1587,7 +1592,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.ipynb to latex\n",
-      "[NbConvertApp] Writing 116131 bytes to Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.tex\n",
+      "[NbConvertApp] Writing 116750 bytes to Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
@@ -1608,13 +1613,6 @@
     "!pdflatex -interaction=batchmode Tutorial-IllinoisGRMHD__driver_evaluate_MHD_rhs.tex\n",
     "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
