IllinoisGRMHD: replaced 'Leo says:' comments by 'FIXME:' comments. Added special thanks to Leo in README file

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb
@@ -132,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
+      "Writing ../src/apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C\n"
      ]
     }
    ],
@@ -573,7 +573,7 @@
     "  //if(PRIMS[BX_CENTER]==0 && PRIMS[BY_CENTER]==0 && PRIMS[BZ_CENTER]==0 && (METRIC_LAP_PSI4[PSI6]>30.0 || CONSERVS[RHOSTAR]/METRIC_LAP_PSI4[PSI6]<100*rho_b_atm)) {\n",
     "  //if(check_B_small < 1.e-300) {\n",
     "  CCTK_REAL Patm;\n",
-    "  // Leo says: the operation below could be replaced by\n",
+    "  // FIXME: the operation below could be replaced by\n",
     "  //           Patm = kpoly*fasterpow_ppm_reconstruct(rho_b_atm,gamma)\n",
     "  if (gamma_equals2==1) { \n",
     "    Patm = kpoly*rho_b_atm*rho_b_atm;\n",
@@ -980,7 +980,7 @@
     "\n",
     "\n",
     "  CCTK_REAL smallb_lower[NUMVARS_SMALLB];\n",
-    "  // Leo says: This could be replaced by the function call\n",
+    "  // FIXME: This could be replaced by the function call\n",
     "  //           lower_4vector_output_spatial_part(psi4,smallb,smallb_lower);\n",
     "  // b_a = b^c g_{ac}\n",
     "  for(int ii=0;ii<4;ii++) { smallb_lower[SMALLBT+ii]=0; for(int jj=0;jj<4;jj++) smallb_lower[SMALLBT+ii] += smallb[SMALLBT+jj]*g4dn[ii][jj]; }\n",
@@ -1075,7 +1075,7 @@
     "  CONSERVS[STILDEZ] = CONSERVS[RHOSTAR]*h_enthalpy*uDN[3] + alpha_sqrt_gamma*(uUP[0]*smallb[SMALLB2]*uDN[3] - smallb[SMALLBT]*smallb_lower[SMALLBZ]);\n",
     "  // tauL = alpha^2 sqrt(gamma) T^{00} - CONSERVS[RHOSTAR]\n",
     "  CONSERVS[TAUENERGY] =  METRIC_LAP_PSI4[LAPSE]*alpha_sqrt_gamma*(rho0_h_plus_b2*SQR(uUP[0]) + P_plus_half_b2*(-SQR(METRIC_LAP_PSI4[LAPSEINV])) - SQR(smallb[SMALLBT])) - CONSERVS[RHOSTAR];\n",
-    "  // Leo says: We have TUPMUNU already, should replace           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ by TUPMUNU[0].\n",
+    "  // FIXME: We have TUPMUNU already, should replace           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ by TUPMUNU[0].\n",
     "}\n",
     "\n",
     "\n"
@@ -1105,13 +1105,13 @@
       "Validation test for apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.C: FAILED!\n",
       "Diff:\n",
       "98a99,100\n",
-      ">   // Leo says: the operation below could be replaced by\n",
+      ">   // FIXME: the operation below could be replaced by\n",
       ">   //           Patm = kpoly*fasterpow_ppm_reconstruct(rho_b_atm,gamma)\n",
       "250a253,254\n",
-      ">   // Leo says: This could be replaced by the function call\n",
+      ">   // FIXME: This could be replaced by the function call\n",
       ">   //           lower_4vector_output_spatial_part(psi4,smallb,smallb_lower);\n",
       "270a275\n",
-      ">   // Leo says: We have TUPMUNU already, should replace           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ by TUPMUNU[0].\n"
+      ">   // FIXME: We have TUPMUNU already, should replace           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ by TUPMUNU[0].\n"
      ]
     }
    ],
@@ -1178,17 +1178,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb to latex\n",
-      "[NbConvertApp] Writing 81710 bytes to Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.ipynb to latex\r\n",
+      "[NbConvertApp] Writing 81482 bytes to Tutorial-IllinoisGRMHD__apply_tau_floor__enforce_limits_on_primitives_and_recompute_conservs.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
