--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ../src/A_i_rhs_no_gauge_terms.C\n"
+      "Writing ../src/A_i_rhs_no_gauge_terms.C\n"
      ]
     }
    ],
@@ -307,17 +307,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb to latex\n",
-      "[NbConvertApp] Writing 30269 bytes to Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.ipynb to latex\r\n",
+      "[NbConvertApp] Writing 43655 bytes to Tutorial-IllinoisGRMHD__A_i_rhs_no_gauge_terms.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
