IllinoisGRMHD: eigen -- Documented the procedure to obtain the eigenvalues of a 3x3 symmetric matrix.

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__eigen.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__eigen.ipynb
@@ -42,8 +42,11 @@
     "0. [Step 0](#src_dir): **Source directory creation**\n",
     "1. [Step 1](#introduction): **Introduction**\n",
     "1. [Step 2](#eigen__c): **`eigen.C`**\n",
-    "1. [Step n-1](#code_validation): **Code validation**\n",
-    "1. [Step n](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
+    "    1. [Step 2.a](#eigen__c__variables): *The variables used in `eigen.C`*\n",
+    "    1. [Step 2.b](#eigen__c__phi): *Determining $\\phi$*\n",
+    "    1. [Step 2.c](#eigen__c__eigenvalues): *The eigenvalues of a $3\\times3$ symmetric matrix*\n",
+    "1. [Step 3](#code_validation): **Code validation**\n",
+    "1. [Step 4](#latex_pdf_output): **Output this module to $\\LaTeX$-formatted PDF file**"
    ]
   },
   {
@@ -88,7 +91,107 @@
     "<a id='introduction'></a>\n",
     "\n",
     "# Step 1: Introduction \\[Back to [top](#toc)\\]\n",
-    "$$\\label{introduction}$$"
+    "$$\\label{introduction}$$\n",
+    "\n",
+    "In this tutorial notebook we will implement an algorithm to evaluate the eigenvalues of a $3\\times3$ symmetric matrix. Our method will be analytical and will follow closely [this discussion](https://en.wikipedia.org/wiki/Eigenvalue_algorithm#3%C3%973_matrices).\n",
+    "\n",
+    "Let $\\mathcal{M}$ be a $3\\times3$ symmetric matrix,\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{M} =\n",
+    "\\begin{pmatrix}\n",
+    "M_{11} & M_{12} & M_{13}\\\\\n",
+    "M_{12} & M_{22} & M_{23}\\\\\n",
+    "M_{13} & M_{23} & M_{33}\n",
+    "\\end{pmatrix}\\ .\n",
+    "$$\n",
+    "\n",
+    "To obtain the eigenvalues of $\\mathcal{M}$, we must solve the *characteristic equation*\n",
+    "\n",
+    "$$\n",
+    "\\det\\left(\\lambda I_{3\\times3} - \\mathcal{M}\\right) = 0\\ ,\n",
+    "$$\n",
+    "\n",
+    "where $\\lambda$ represents the eigenvalues of $\\mathcal{M}$ and $I_{3\\times3} = {\\rm diag}\\left(1,1,1\\right)$ is the $3\\times3$ identity matrix. For this particular case, the characteristic equation of $\\mathcal{M}$ is then given by\n",
+    "\n",
+    "$$\n",
+    "\\lambda^{3} - {\\rm tr}\\left(\\mathcal{M}\\right)\\lambda^{2} + \\left[\\frac{{\\rm tr}\\left(\\mathcal{M}^{2}\\right) - {\\rm tr}\\left(\\mathcal{M}\\right)^{2}}{2}\\right]\\lambda - \\det\\left(\\mathcal{M}\\right) = 0\\ .\n",
+    "$$\n",
+    "\n",
+    "Now let $\\mathcal{M} = n\\mathcal{N} + mI_{3\\times3}$, so that the matrices $\\mathcal{M}$ and $\\mathcal{N}$ have the same eigenvectors. Then, $\\kappa$ is an eigenvalue of $\\mathcal{N}$ if, and only if, $\\lambda = n\\kappa + m$ is an eigenvalue of $\\mathcal{M}$. Now, let us look at the following identities:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{N} = \\frac{1}{n}\\left(\\mathcal{M} - mI_{3\\times3}\\right)\\ .\n",
+    "$$\n",
+    "\n",
+    "Choosing $m \\equiv \\frac{1}{3}{\\rm tr}\\left(\\mathcal{M}\\right)$, we get\n",
+    "\n",
+    "$$\n",
+    "{\\rm tr}\\left(\\mathcal{N}\\right) = \\frac{1}{n}\\left(\\mathcal{M} - 3m\\right)=0\\ .\n",
+    "$$\n",
+    "\n",
+    "Also,\n",
+    "\n",
+    "$$\n",
+    "{\\rm tr}\\left(\\mathcal{N}^{2}\\right) = \\frac{1}{n^{2}}\\left[N_{11}^{2}+N_{22}^{2}+N_{33}^{2}+2\\left(N_{12}^{2}+N_{13}^{2}+N_{23}^{2}\\right)\\right]\\ ,\n",
+    "$$\n",
+    "\n",
+    "so that if we choose $n\\equiv\\sqrt{\\frac{N_{11}^{2}+N_{22}^{2}+N_{33}^{2}+2\\left(N_{12}^{2}+N_{13}^{2}+N_{23}^{2}\\right)}{6}}$ we get\n",
+    "\n",
+    "$$\n",
+    "{\\rm tr}\\left(\\mathcal{N}^{2}\\right) = 6\\ .\n",
+    "$$\n",
+    "\n",
+    "Then, if we look at the characteristic equation for the matrix $\\mathcal{N}$,\n",
+    "\n",
+    "$$\n",
+    "\\kappa^{3} - {\\rm tr}\\left(\\mathcal{N}\\right)\\kappa^{2} + \\left[\\frac{{\\rm tr}\\left(\\mathcal{N}^{2}\\right) - {\\rm tr}\\left(\\mathcal{N}\\right)^{2}}{2}\\right]\\kappa - \\det\\left(\\mathcal{N}\\right) = 0\\ ,\n",
+    "$$\n",
+    "\n",
+    "we see that it can be greatly simplified with our choices of $m$ and $n$,\n",
+    "\n",
+    "$$\n",
+    "\\kappa^{3} - 3\\kappa - \\det\\left(\\mathcal{N}\\right) = 0\\ .\n",
+    "$$\n",
+    "\n",
+    "Further simplification of this characteristic equation can be obtained by using\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\kappa &\\equiv 2\\cos\\phi\\ ,\\\\\n",
+    "\\cos\\left(3\\phi\\right) &= 4\\cos^{3}\\phi - 3\\cos\\phi\\ ,\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "so that\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "0 &= 8\\cos^{3}\\phi - 6\\cos\\phi - \\det\\left(\\mathcal{N}\\right)\\\\\n",
+    "  &= 2\\cos\\left(3\\phi\\right) - \\det\\left(\\mathcal{N}\\right)\\\\\n",
+    "\\implies \\phi &= \\frac{1}{3}\\arccos\\frac{\\det\\left(\\mathcal{N}\\right)}{2} + \\frac{2k\\pi}{3}\\ ,\\ k=0,1,2\\ ,\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "which, finally, yields\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\\kappa\\left(k\\right) = 2\\cos\\left(\\frac{1}{3}\\arccos\\frac{\\det\\left(\\mathcal{N}\\right)}{2}+\\frac{2k\\pi}{3}\\right)}\\ .\n",
+    "$$\n",
+    "\n",
+    "Once we have $\\kappa$, we can find the eigenvectors of $\\mathcal{M}$ doing\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\n",
+    "\\begin{align}\n",
+    "\\lambda_{1} &= m + 2n\\kappa(0)\\\\\n",
+    "\\lambda_{2} &= m + 2n\\kappa(1)\\\\\n",
+    "\\lambda_{3} &= 3m - \\lambda_{1} - \\lambda_{2}\n",
+    "\\end{align}\n",
+    "}\\ ,\n",
+    "$$\n",
+    "\n",
+    "where we have used the fact that ${\\rm tr}\\left(\\mathcal{M}\\right)=\\lambda_{1}+\\lambda_{2}+\\lambda_{3}$ to compute $\\lambda_{3}$."
    ]
   },
   {
@@ -98,7 +201,63 @@
     "<a id='eigen__c'></a>\n",
     "\n",
     "# Step 2: `eigen.C` \\[Back to [top](#toc)\\]\n",
-    "$$\\label{eigen__c}$$"
+    "$$\\label{eigen__c}$$\n",
+    "\n",
+    "<a id='eigen__c__variables'></a>\n",
+    "\n",
+    "## Step 2.a: The variables used in `eigen.C` \\[Back to [top](#toc)\\]\n",
+    "$$\\label{eigen__c__variables}$$\n",
+    "\n",
+    "In the algorithm below, we define the following quantities\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\n",
+    "\\begin{align}\n",
+    "\\mathcal{K} &= \\mathcal{M} - mI_{3\\times3}\\\\\n",
+    "m &= \\frac{{\\rm tr}\\left(\\mathcal{M}\\right)}{3}\\\\\n",
+    "q &= \\frac{\\det\\left(\\mathcal{K}\\right)}{2}\\\\\n",
+    "p &= n^{2} = \\frac{{\\rm tr}\\left(\\mathcal{K}^{2}\\right)}{6}\n",
+    "\\end{align}\n",
+    "}\\ .\n",
+    "$$\n",
+    "\n",
+    "We these definitions, we have the following quantities to be implemented:\n",
+    "\n",
+    "$$\n",
+    "\\boxed{ m = \\frac{\\left(M_{11} + M_{22} + M_{33}\\right)}{3} }\\ .\n",
+    "$$\n",
+    "\n",
+    "The matrix $\\mathcal{K}$ is simply\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\n",
+    "\\mathcal{K} =\n",
+    "\\begin{pmatrix}\n",
+    "M_{11}-m & M_{12} & M_{13}\\\\\n",
+    "M_{12} & M_{22}-m & M_{23}\\\\\n",
+    "M_{13} & M_{23} & M_{33}-m\n",
+    "\\end{pmatrix}\n",
+    "}\\ .\n",
+    "$$\n",
+    "\n",
+    "Straightforwardly, we have\n",
+    "\n",
+    "$$\n",
+    "\\boxed{q = \\frac{K_{11}K_{22}K_{33} +\n",
+    "          K_{12}K_{23}K_{13} +\n",
+    "          K_{13}K_{12}K_{23} -\n",
+    "          K_{13}K_{22}K_{13} -\n",
+    "          K_{12}K_{12}K_{33} -\n",
+    "          K_{11}K_{23}K_{23}\n",
+    "          }{2}\n",
+    "          }\\ .\n",
+    "$$\n",
+    "\n",
+    "Since $\\mathcal{K}$ is symmetric as well, we have\n",
+    "\n",
+    "$$\n",
+    "\\boxed{p = \\frac{K_{11}^{2} + K_{22}^{2} + K_{33}^{2} + 2\\left(K_{12}^{2} + K_{13}^{2} + K_{23}^{2}\\right)}{6}}\\ .\n",
+    "$$"
    ]
   },
   {
@@ -110,7 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/eigen.C\n"
+      "Overwriting ../src/eigen.C\n"
      ]
     }
    ],
@@ -131,7 +290,48 @@
     "  CCTK_REAL K11 = M11 - m, K12 = M12, K13 = M13, K22 = M22-m, K23 = M23, K33=M33-m;\n",
     "  CCTK_REAL q = 0.5* (K11*K22*K33 + K12*K23*K13 + K13*K12*K23 - K13*K22*K13\n",
     "                      - K12*K12*K33 - K11*K23*K23);\n",
-    "  CCTK_REAL p = ( SQR(K11) + SQR(K22) + SQR(K33) + 2.0*(SQR(K12) + SQR(K13) + SQR(K23) ) )/6.0;\n",
+    "  CCTK_REAL p = ( SQR(K11) + SQR(K22) + SQR(K33) + 2.0*(SQR(K12) + SQR(K13) + SQR(K23) ) )/6.0;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eigen__c__phi'></a>\n",
+    "\n",
+    "## Step 2.b: Determining $\\phi$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{eigen__c__phi}$$\n",
+    "\n",
+    "We then employ the following criterion to determine $\\phi$:\n",
+    "\n",
+    "$$\n",
+    "\\phi\n",
+    "=\n",
+    "\\left\\{\n",
+    "\\begin{matrix}\n",
+    "0 &,\\ {\\rm if}\\ \\left|q\\right| \\geq p^{3/2}\\ ,\\\\\n",
+    "\\arccos\\left(\\frac{q}{p^{3/2}}\\right) &,\\ {\\rm otherwise}\\ .\n",
+    "\\end{matrix}\n",
+    "\\right.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/eigen.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__eigen__C\n",
+    "\n",
     "  CCTK_REAL phi;\n",
     "  CCTK_REAL p32 = sqrt(p*p*p);\n",
     "  if (fabs(q) >= fabs(p32) ) {\n",
@@ -139,7 +339,47 @@
     "  } else {\n",
     "    phi = acos(q/p32)/3.0;\n",
     "  }\n",
-    "  if (phi<0.0) phi += M_PI/3.0;\n",
+    "  if (phi<0.0) phi += M_PI/3.0;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eigen__c__eigenvalues'></a>\n",
+    "\n",
+    "## Step 2.c: The eigenvalues of a $3\\times3$ symmetric matrix \\[Back to [top](#toc)\\]\n",
+    "$$\\label{eigen__c__eigenvalues}$$\n",
+    "\n",
+    "Finally, the eigenvalues are computed using\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\n",
+    "\\begin{align}\n",
+    "\\lambda_{1} &= m + 2\\sqrt{p}\\cos\\phi\\\\\n",
+    "\\lambda_{2} &= m - \\sqrt{p}\\cos\\phi - \\sqrt{3p}\\sin\\phi\\\\\n",
+    "\\lambda_{3} &= m - \\sqrt{p}\\cos\\phi + \\sqrt{3p}\\sin\\phi\n",
+    "\\end{align}\n",
+    "}\\ .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ../src/eigen.C\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a $outfile_path__eigen__C\n",
+    "\n",
     "  CCTK_REAL sqrtp = sqrt(p);\n",
     "  CCTK_REAL sqrtp_cosphi = sqrtp*cos(phi);\n",
     "  CCTK_REAL sqrtp_sqrt3_sinphi = sqrtp*sqrt(3.0)*sin(phi);\n",
@@ -156,7 +396,7 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Step n-1: Code validation \\[Back to [top](#toc)\\]\n",
+    "# Step 3: Code validation \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
     "First we download the original `IllinoisGRMHD` source code and then compare it to the source code generated by this tutorial notebook."
@@ -164,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +462,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step n: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 4: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
@@ -231,24 +471,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__eigen.ipynb to latex\r\n",
-      "[NbConvertApp] Writing 34629 bytes to Tutorial-IllinoisGRMHD__eigen.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
-      " restricted \\write18 enabled.\r\n",
-      "entering extended mode\r\n"
+      "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__eigen.ipynb to latex\n",
+      "[NbConvertApp] Writing 41121 bytes to Tutorial-IllinoisGRMHD__eigen.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
      ]
     }
    ],
